# mobile-coverage-api

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  justfile  pyproject.toml
src/: alembic.ini  entrypoint.sh
src/alembic/: env.py  script.py.mako
src/alembic/versions/: 13fc4f3850c2_rename_and_replace_fields_names_for_.py  6d012c5cb6f3_init_provider_and_site_models.py  8c6a3cb5931b_add_location_field_for_site.py
src/app/: main.py
src/app/api/v1/: api.py
src/app/api/v1/endpoints/: health.py  network_coverage.py
src/app/core/: config.py  middlewares.py
src/app/db/: session.py
src/app/exceptions/: __init__.py  api.py  base.py  error_code.py  openapi_handler.py
src/app/models/: __init__.py  base.py  provider.py  site.py
src/app/repository/: __init__.py  base.py  provider.py  site.py
src/app/schemas/: address.py  geo_coordinates.py  network_coverage.py  provider.py  site.py
src/app/services/: adresse_api.py  data_ingestion.py  helper.py
src/app/tests/: conftest.py  factories.py  fixtures.py
src/app/tests/functional/: test_network_coverage_api.py
src/app/tests/unit/: fixtures.py
src/app/tests/unit/repositories/: test_provider_repo.py  test_site_repo.py
src/app/tests/unit/services/: test_adresse_api.py  test_data_ingestion.py
