[project]
name = "mobile-coverage-api"
version = "0.1.0"
description = "API that tells you which mobile networks (2G/3G/4G) are available at a given address in France."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.30.0",
    "environ-config>=24.1.0",
    "factory-boy>=3.3.3",
    "fastapi>=0.121.3",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.11",
    "pyproj>=3.7.2",
    "python-multipart>=0.0.20",
    "respx>=0.22.0",
    "sqlalchemy>=2.0.44",
    "sqlalchemy-utils>=0.42.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "bandit>=1.8.3",
    "ipython>=9.7.0",
    "mypy>=1.15.0",
    "mypy-protobuf>=3.6.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-env>=1.2.0",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.14.6",
    "safety>=3.4.0",
]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

follow_imports_for_stubs = true
follow_imports = "silent"
strict_optional = false

warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = false

exclude = ["alembic"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "*.__init__.*"
ignore_errors = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true


[tool.pytest]
minversion = "9.0"
python_files = ["test*.py", "*_tests.py"]
testpaths = ["app"]
addopts = [
    "-v",
    "--cov=app",
    "--cov-fail-under=85",
    "--cov-report=term-missing",
    "--color=yes",
    "--strict-markers",
    "--tb=short",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
env = [
    "DB_NAME=test",
]


[tool.bandit]
exclude = ["test_*.py"]



[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "migrations",
    "config",
    "versions",
    "alembic",
]

line-length = 79
indent-width = 4

target-version = "py313"

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "C901", # mccabe
    "I001", # import sorting
    "E5", # line & backslash checks
    "W2", # blank line checks
    "B", # flake8-bugbear
]


fixable = ["ALL"]
unfixable = []

dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"


[tool.ruff.format]
quote-style = "double"

indent-style = "space"

skip-magic-trailing-comma = false

line-ending = "auto"
